--- a/_posts/2015-05-12-lab-1-IO.markdown
+++ b/_posts/2015-05-12-lab-1-IO.markdown
@@ -41,3 +41,9 @@ There are a lot of different ways to make this work, but there are three ways th
 1. For now, make sure you end your lines with semicolons. Some lines don't need semicolons, like blank lines and lines that just have a curly brace (`{` or `}`) on it. You also don't need semicolons on lines that _declare a function_, such as `void loop()`.
 2. If your code is uploading to the Arduino, but it isn't working right, make sure that you wrote your `pinMode` statements in the `setup` function. Writing them in the `loop` function would work too, but it's bad practice, because then you're setting the directions _over and over_, which is wasteful.
 3. If you're still having problems, make sure that your circuit looks the same as the one above and then ask a TA for help.
+
+**Questions** (answer each with one to two solid sentences of explanation.)
+
+1. Which way of writing this code do you think is the best way?
+2. Why are we using `bool` for `buttonPushed` instead of `int` or `char` or another type?
+3. If you encountered any issues, write them here and discuss how you solved them.
