--- a/_posts/2015-06-02-lab-4-loops.markdown
+++ b/_posts/2015-06-02-lab-4-loops.markdown
@@ -6,3 +6,24 @@ categories: docs
 ---
 
 In this lab, we're going to remove the piezo element and add two more LEDs, for a total of three LEDs.
+
+Background
+==========
+
+When writing software, there innumerable times when you need to do a certain action more than once. Copying and pasting code is a direct violation of the [DRY (Don't Repeat Yourself) principle](https://en.wikipedia.org/wiki/Don't_repeat_yourself), and WET solutions (We Enjoy Typing) make code that is both difficult to understand and maintain.
+
+One of the fundamental tools used to avoid WET solutions is the loop. There are three major kinds of loops in C++: `for`, `while`, and `do..while`. Combining these three will allow you to minimize repetition. Here is an example of each:
+
+	int x = 1;
+    for (int i = 2; i <= 10; i++)
+    {
+    	x = x * i;
+    }
+    //x is 10 factorial.
+
+    int x = 244;
+    while (x - 3 > 8)
+    {
+    	x = x / 2;
+    }
+    //x is now 7, and `7 - 3` = `4` which is less than `8`, therefore the while loop stopped looping.
