--- a/_posts/2015-07-01-speed-game-1.markdown
+++ b/_posts/2015-07-01-speed-game-1.markdown
@@ -1,6 +1,23 @@
 ---
 layout: post
-title:  "Lab 4: Loops"
+title:  "Lab 5: Speed Game (Part 1)"
 date:   2015-06-02 13:22:30
 categories: docs
 ---
+
+It's time for a fun lab! For this lab, we're going to need two buttons, two normal LEDs, and the big tri-color LED.
+
+The goal of this lab is to build a speed game. The gameplay should be as follows:
+- set the tri-color LED to red
+- wait for a random (but still reasonable) amount of time
+- set the tri-color LED to green
+- whenever a user presses their button after this point, the tri-color LED changes to blue to signify the game is over, and the LED in front of that user turns on to let them know that they were the winner.
+- wait 2 seconds, then reset the tri-color to red and start over
+
+There are only two pieces of information you need to complete this lab that you don't already have: `random` and how to use the tri-color LED.
+
+`random` is defined as `long random([long min], long max)`. The brackets indiciate that the `min` parameter is optional, if you only provide one argument it will be treated as the maximum.
+
+The tri-color LED is really just 3 LEDs in one. There is nothing special about it. It has four pins, three of which are cathodes, and one of which is the common anode. The longest pin is the common anode, which means that it will be connected to 5 volts. The lone pin beside it is the red cathode, the pin on the other side is blue, and the pin farther away is green. Each cathode should be connected to a 560 ohm resistor, and then the output of that resistor connected to a pin on the Arduino. When the output on that pin is HIGH, there is no voltage difference between the input and the output, so the LED will be off. When the output is LOW, electricity can drain through the LED into the pin on the Arduino. So, by default, you should keep the LED pins for the tri-color HIGH, and then turn each one LOW whenever you want to turn it on.
+
+Good luck!
