--- a/_posts/2015-07-08-avr-mcu.markdown
+++ b/_posts/2015-07-08-avr-mcu.markdown
@@ -1,44 +1,10 @@
 ---
 layout: post
-title:  "Keyword Help: while, do"
+title:  "Hardware Help: AVR Microcontroller"
 date:   2015-07-08 15:37:30
 categories: docs
 ---
 
-	while, do
+	AVR MCU
 
-These keywords are used for looping. The general syntax is:
-
-	while (<expr>){
-
-		//do this over and over again until <expr> is false
-
-	}
-
-	do {
-
-		//do this once, then check <expr>, and keep doing until it is false
-
-	} while (<expr>);
-
-where <expr> is a boolean expression.
-
-The first of the above is called a while loop. It will execute the statements between the {} until its condition is false.
-
-The second loop is a do-while loop. It will ALWAYS execute the statements in the {} once, then check the expression, and behave as a while loop from there on out.
-
-Usage:
-
-	bool done = false;
-
-	while (!done){
-
-		//do something, eventually setting done to true
-
-	}
-
-	do {
-
-		//done is currently true, so this will happen only once.
-
-	} while (!done);
+What is an AVR microcontroller? An AVR microcontroller is an integrated circuit (IC), also known colloquially as a chip, that contains memory of various kinds and is able to process instructions that operate on that memory and on the real world, through the pins in it. On the Arduino Uno, for instance, the AVR microcontroller is the big long chip plugged into a sockert on the printed circuit board.
