Added a sentence about writing words to the screen to show which value displayed is the target temperature and which is the current temp.

--- a/_posts/2015-07-01-lab-7-ac-unit.markdown
+++ b/_posts/2015-07-01-lab-7-ac-unit.markdown
@@ -18,6 +18,6 @@ Pulse Width Modulation, PWM, is a technique for initiating an analog output. Sin
 
 `analogWrite` is defined as `void analogWrite(pin, value)`, where `value` is an 8-bit value, 0 to 255. 255 is 5-volts, and 0 is 0-volts.
 
-We will assume that the fan is always circulating air in the building. What we need to control is the temperature of that air. We will start out by targeting 21 degrees Celsius (about 70 degrees Fahrenheit), and the LCD display should always show the currently targeted temperature, along with the current temperature. The up and down arrow keys on the LCD shield will control the target temperature, moving it up and down.
+We will assume that the fan is always circulating air in the building. What we need to control is the temperature of that air. We will start out by targeting 21 degrees Celsius (about 70 degrees Fahrenheit), and the LCD display should always show the currently targeted temperature, along with the current temperature. Make sure to include words on the screen that indicate which number is the target temperature and which is the current temperature. The up and down arrow keys on the LCD shield will control the target temperature, moving it up and down.
 
 If the temperature in the room is greater than the target temperature, we want to start lighting up the blue LED, signifying that we're pumping cold air into the room. If it is already colder in the room, then we want to light up the red LED, heating the room. The formula for the analog output value that we're writing to these LEDs should be calculated as such: `int analogVal = (target temperature - current_temperature) * 51;` This will mean that if the two temperatures are 5 degrees apart, we are turning on either the blue LED or the red LED fully. You should check the value of `analogVal`. If it is less than zero, flip the sign so it is positive and `analogWrite` it to the heater. If it is greater than zero, `analogWrite` it to the A/C. **Always** make sure the value is less than 256 before using `analogWrite` with it. If it is greater than 255, then set it to 255. If it is less than -255, set it to -255, but make sure that you are planning to flip the sign from negative to positive before writing it as well. You will be graded on all these conditions.
