Thank you Josh for the help.  Lab 10 is fixed as well as the typo in pitches.

--- a/_posts/2015-11-09-pitches.markdown
+++ b/_posts/2015-11-09-pitches.markdown
@@ -5,7 +5,7 @@ date:   2015-11-09 22:38:30
 categories: docs
 ---
 
-Create a .h file in the same folder as your lab containing the code below.  Another (not recommended) option in to copy and paste this code at the top of your lab.
+Create a .h file in the same folder as your lab containing the code below.  Another (not recommended) option is to copy and paste this code at the top of your lab.
 
 	/*************************************************
 	 * Public Constants
